Finish webscraping and save data as csv files

--- a/01/homework_01_B201.ipynb
+++ b/01/homework_01_B201.ipynb
@@ -35,7 +35,7 @@
     "  * Zkuste najít hlasování, kde poslanci hlasovali nejvíce jinak, než obvykle.\n",
     "  \n",
     "## Tipy a triky\n",
-    "  * Balíčky iportujte na začátku notebooku (příp. na začátku scrapovací a pak na začátku vizualizační části).\n",
+    "  * Balíčky importujte na začátku notebooku (příp. na začátku scrapovací a pak na začátku vizualizační části).\n",
     "  * Využívejte markdown buňky (jako je ta, ve které je tento text) a naspisy, abyste usnadnily orientaci opravující(mu).\n",
     "  * Pečlivě si vybírejte grafy a vizualizace, aby co nejlépe vyjádřily to, co vyjádřit chcete. Doporučuji projít si pro inspiraci alespoň galerie balíčků `matplotlib` a `seaborn`.\n",
     "\n",
@@ -48,12 +48,435 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### odtud už je to Vaše"
+    "import requests\n",
+    "import re\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Při procházení stránek jednotlivých hlasování jsem si všiml, že v URL každého z nich je index, který určuje pořadí daného hlasování. Přechod mezi jedním hlasováním a druhým je vždy jen inkrement tohoto indexu, takže jsem si poznamenal indexy prvního a posledního hlasování, což mi následně pomůže doménu procházet efektivněji."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# important information extracted from website analysis\n",
+    "\n",
+    "voting_start = 69445 # index hidden in the URL of the first voting\n",
+    "voting_end = 73901 # index in the URL of the last voting\n",
+    "char_set = 'windows-1250' # document character set for the website\n",
+    "\n",
+    "# constants\n",
+    "\n",
+    "VOTINGS_FILE = 'data/votings.csv'\n",
+    "INDIVIDUALS_FILE = 'data/individuals.csv'\n",
+    "PARTIES_FILE = 'data/parties.csv'\n",
+    "COLLECT_DATA = False\n",
+    "time = 3852.08399105072"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing page: 69500\n",
+      "Processing page: 69600\n",
+      "Processing page: 69700\n",
+      "Processing page: 69800\n",
+      "Processing page: 69900\n",
+      "Processing page: 70000\n",
+      "Processing page: 70100\n",
+      "Processing page: 70200\n",
+      "Processing page: 70300\n",
+      "Processing page: 70400\n",
+      "Processing page: 70500\n",
+      "Processing page: 70600\n",
+      "Processing page: 70700\n",
+      "Processing page: 70800\n",
+      "Processing page: 70900\n",
+      "Processing page: 71000\n",
+      "Processing page: 71100\n",
+      "Processing page: 71200\n",
+      "Processing page: 71300\n",
+      "Processing page: 71400\n",
+      "Processing page: 71500\n",
+      "Processing page: 71600\n",
+      "Processing page: 71700\n",
+      "Processing page: 71800\n",
+      "Processing page: 71900\n",
+      "Processing page: 72000\n",
+      "Processing page: 72100\n",
+      "Processing page: 72200\n",
+      "Processing page: 72300\n",
+      "Processing page: 72400\n",
+      "Processing page: 72500\n",
+      "Processing page: 72600\n",
+      "Processing page: 72700\n",
+      "Processing page: 72800\n",
+      "Processing page: 72900\n",
+      "Processing page: 73000\n",
+      "Processing page: 73100\n",
+      "Processing page: 73200\n",
+      "Processing page: 73300\n",
+      "Processing page: 73400\n",
+      "Processing page: 73500\n",
+      "Processing page: 73600\n",
+      "Processing page: 73700\n",
+      "Processing page: 73800\n",
+      "Processing page: 73900\n",
+      "3852.08399105072\n"
+     ]
+    }
+   ],
+   "source": [
+    "def setup_files():\n",
+    "    f = open(VOTINGS_FILE, 'w', encoding='utf-8')\n",
+    "    f.write('Voting ID; Meeting number; Voting number; Subject; Number of voters; Yes; No; Unregistered; Refrained; Excused; Passed; Valid\\n')\n",
+    "    f.close()\n",
+    "    \n",
+    "    f2 = open(INDIVIDUALS_FILE, 'w', encoding='utf-8')\n",
+    "    f2.write('Name; Party; Voting ID; Vote\\n')\n",
+    "    f2.close()\n",
+    "    \n",
+    "    f3 = open(PARTIES_FILE, 'w', encoding='utf-8')\n",
+    "    f3.write('Party; Voting ID; Yes; No; Unregistered; Refrained; Excused\\n')\n",
+    "    f3.close()\n",
+    "\n",
+    "\n",
+    "# function takes header of the website and returns a list including its basic information\n",
+    "# [meeting number, voting number, date, time, subject]\n",
+    "def split_header(header):\n",
+    "    match = re.search(r'[0-9][0-9]:[0-9][0-9]', header)\n",
+    "    if not match:\n",
+    "        raise Exception('Unable to split header')\n",
+    "    split = match.end()\n",
+    "    arr = [header[:split], header[split:]]\n",
+    "    res = [x.strip() for x in arr[0].split(',')]\n",
+    "    res.append(arr[1].strip() if len(arr[1]) > 0 else \"''\")\n",
+    "    res[0] = res[0].split('.')[0]\n",
+    "    res[1] = res[1].split('.')[0]\n",
+    "    return res\n",
+    "    \n",
+    "\n",
+    "def process_voting(voting_index, soup):\n",
+    "    main = soup.find('div', { 'id' : 'main-content' })\n",
+    "\n",
+    "    # process header\n",
+    "    voting_header = soup.find('h1', { 'class' : 'page-title-x' }).get_text()\n",
+    "    header = split_header(voting_header)\n",
+    "    f = open(VOTINGS_FILE, 'a', encoding='utf-8')\n",
+    "    f.write(f'{voting_index}; {header[0]}; {header[1]}; {header[4]}; ')\n",
+    "\n",
+    "    # process vote summary table\n",
+    "    cell = soup.find_all('i', text=re.compile('Celkem'))[0].parent.parent\n",
+    "    curr = cell.next_sibling\n",
+    "    for i in range(6):\n",
+    "        f.write(f'{curr.get_text()}; ')\n",
+    "        curr = curr.next_sibling\n",
+    "\n",
+    "    # vote passed?\n",
+    "    summary = soup.find('div', {'class' : 'summary'})\n",
+    "    result = summary.find('span')\n",
+    "    f.write('1; ') if result.get_text() == 'NÁVRH BYL PŘIJAT' else f.write('0; ')\n",
+    "\n",
+    "    # valid election?\n",
+    "    status = soup.find_all('p', {'class': 'status invalid'})\n",
+    "    f.write('{valid}'.format(valid='0' if len(status) > 0 and status[0] == \"Hlasování bylo prohlášeno za zmatečné.\" else '1\\n'))\n",
+    "    f.close()\n",
+    "        \n",
+    "\n",
+    "def process_party(voting_index, soup, party_info, text, name):\n",
+    "    f = open(PARTIES_FILE, 'a', encoding='utf-8')\n",
+    "    nums = party_info.find('span', {'class' : 'results'}).find_all('strong')\n",
+    "    \n",
+    "    i = 0\n",
+    "    if 'Ano:' in text:\n",
+    "        yes = nums[i].get_text()\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        yes = 0\n",
+    "            \n",
+    "    if 'Ne:' in text:\n",
+    "        no = nums[i].get_text()\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        no = 0\n",
+    "        \n",
+    "    if 'Nepřihlášen:' in text:\n",
+    "        unregistered = nums[i].get_text()\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        unregistered = 0\n",
+    "        \n",
+    "    if 'Zdržel se:' in text:\n",
+    "        refrained = nums[i].get_text()\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        refrained = 0\n",
+    "        \n",
+    "    if 'Omluven:' in text:\n",
+    "        excused = nums[i].get_text()\n",
+    "        i += 1\n",
+    "    else:\n",
+    "        excused = 0\n",
+    "\n",
+    "    #print(f'{name}: {yes},{no},{unregistered},{refrained},{excused}')\n",
+    "    f.write(f'{name}; {voting_index}; {yes}; {no}; {unregistered}; {refrained}; {excused}\\n')\n",
+    "    f.close()\n",
+    "        \n",
+    "\n",
+    "# vote: A (yes), N (no), 0 (Unregistered), Z (refrained), M (excused)\n",
+    "def process_individuals(voting_index, soup):\n",
+    "    party_tables = soup.find('div', {'id' : 'main-content'}).find_all('h2', {'class' : 'section-title center'})[1:]\n",
+    "    res_tables = soup.find_all('ul', {'class' : 'results'})\n",
+    "    \n",
+    "    for i in range(len(party_tables) - 1):\n",
+    "        party_info = party_tables[i].find('span')\n",
+    "        text = party_info.get_text()\n",
+    "        if 'Tabulkovy vypis' in text:\n",
+    "            continue\n",
+    "\n",
+    "        tmp = text.split(\" \", 1)\n",
+    "        party_name = text.split(' ', 1)[0]\n",
+    "        process_party(voting_index, soup, party_info, text, party_name)\n",
+    "        \n",
+    "        party_voters = res_tables[i].find_all('li')\n",
+    "        f2 = open(INDIVIDUALS_FILE, 'a', encoding='utf-8')\n",
+    "        for voter in party_voters:\n",
+    "            name = voter.find('a').get_text()\n",
+    "            vote = voter.find('span').contents[0]\n",
+    "            #print(f'{name}, {party_name}, {vote}')\n",
+    "            f2.write(f'{name}; {party_name}; {voting_index}; {vote}\\n')\n",
+    "        f2.close()\n",
+    "\n",
+    "        \n",
+    "def process_page(voting_index):\n",
+    "    try:\n",
+    "        url = f'https://www.psp.cz/sqw/hlasy.sqw?g={voting_index}&l=cz'\n",
+    "        res = requests.get(url)\n",
+    "        html_page = res.content\n",
+    "        soup = BeautifulSoup(html_page, 'html.parser', from_encoding=char_set)\n",
+    "        \n",
+    "        process_voting(voting_index, soup)\n",
+    "        process_individuals(voting_index, soup)\n",
+    "    except Exception as e:\n",
+    "        print(f'Could not parse page: {voting_index} ... {e}')\n",
+    "\n",
+    "\n",
+    "def process_data():\n",
+    "    start = time.time()\n",
+    "    setup_files()\n",
+    "    \n",
+    "    for i in range(voting_start, voting_end):\n",
+    "        if i % 100 == 0:\n",
+    "            print(f'Processing page: {i}')\n",
+    "        process_page(i)\n",
+    "        time.sleep(0.3)\n",
+    "        \n",
+    "    end = time.time()\n",
+    "    print(end - start)\n",
+    "\n",
+    "if COLLECT_DATA:\n",
+    "    process_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Voting ID</th>\n",
+       "      <th>Yes</th>\n",
+       "      <th>No</th>\n",
+       "      <th>Unregistered</th>\n",
+       "      <th>Refrained</th>\n",
+       "      <th>Excused</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5546</th>\n",
+       "      <td>ANO</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5547</th>\n",
+       "      <td>ODS</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5548</th>\n",
+       "      <td>Piráti</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5549</th>\n",
+       "      <td>SPD</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5550</th>\n",
+       "      <td>ČSSD</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5551</th>\n",
+       "      <td>KSČM</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5552</th>\n",
+       "      <td>KDU-ČSL</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5553</th>\n",
+       "      <td>TOP09</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5554</th>\n",
+       "      <td>STAN</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5555</th>\n",
+       "      <td>Nezařaz</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Party  Voting ID  Yes  No  Unregistered  Refrained  Excused\n",
+       "5546      ANO      70000    0  65             0          5        8\n",
+       "5547      ODS      70000   21   0             0          1        1\n",
+       "5548   Piráti      70000   21   0             0          1        0\n",
+       "5549      SPD      70000   17   0             0          0        2\n",
+       "5550     ČSSD      70000    0  10             0          3        2\n",
+       "5551     KSČM      70000    0  12             0          1        2\n",
+       "5552  KDU-ČSL      70000    9   0             0          0        1\n",
+       "5553    TOP09      70000    5   0             0          1        1\n",
+       "5554     STAN      70000    4   0             0          0        2\n",
+       "5555  Nezařaz      70000    4   0             0          0        1"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_v = pd.read_csv('data/votings.csv', delimiter=';')\n",
+    "df_i = pd.read_csv('data/individuals.csv', delimiter=';')\n",
+    "df_p = pd.read_csv('data/parties.csv', delimiter=';')\n",
+    "\n",
+    "df_p.loc[df_p['Voting ID'] == 70000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -61,18 +484,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
   }
  },
  "nbformat": 4,
