Add visualization of attendence of all members by party

--- a/01/homework_01_B201.ipynb
+++ b/01/homework_01_B201.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +369,7 @@
     }
    ],
    "source": [
+    "print('Processing data...')\n",
     "df1 = df_p[df_p.Party != \"Nezařaz\"]\n",
     "parties = (df1[df1['Voting ID'] == voting_start])['Party']\n",
     "party_cnt = len(parties)\n",
@@ -394,8 +395,7 @@
     "                matched += 1\n",
     "        similarity_matrix[first][second] = matched / voting_cnt\n",
     "        #print(f'{first} and {second} matched {matched}x')\n",
-    "\n",
-    "\n",
+    "        \n",
     "# visualize results using a heatmap\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "\n",
@@ -419,7 +419,7 @@
    "outputs": [],
    "source": [
     "warnings.filterwarnings('ignore')\n",
-    "\n",
+    "print('Processing data...')\n",
     "\n",
     "df1 = df_p[df_p.Party != \"Nezařaz\"]\n",
     "parties = (df1[df1['Voting ID'] == voting_start])['Party']\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +470,99 @@
     "    axes[i].text(74300, 0.35, curr['Party'].tolist()[0], fontsize=40, color=colors[i])\n",
     "    \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "72500 - duben 2020 - korona zpusobila tak 50% ucast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing data...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Processing data...')\n",
+    "\n",
+    "party_list = (df1[df1['Voting ID'] == voting_start])['Party'].tolist()\n",
+    "\n",
+    "curr = df_i[df_i['Party'] == 'ANO']\n",
+    "\n",
+    "all_absences = {}\n",
+    "\n",
+    "for p in party_list:\n",
+    "    curr = df_i[df_i['Party'] == p]\n",
+    "    absences = {}\n",
+    "    \n",
+    "    for df_index, row in curr.iterrows():\n",
+    "        if row['Name'] in absences:\n",
+    "            if row['Vote'] == 'A' or row['Vote'] == 'N' or row['Vote'] == 'Z':\n",
+    "                absences[row['Name']]['Present'] += 1\n",
+    "            else:\n",
+    "                absences[row['Name']]['Absent'] += 1\n",
+    "        else:\n",
+    "            absences[row['Name']] = {}\n",
+    "            if row['Vote'] == 'A' or row['Vote'] == 'N' or row['Vote'] == 'Z':\n",
+    "                absences[row['Name']]['Present'] = 1\n",
+    "                absences[row['Name']]['Absent'] = 0\n",
+    "            else:\n",
+    "                absences[row['Name']]['Present'] = 0\n",
+    "                absences[row['Name']]['Absent'] = 1\n",
+    "    all_absences[p] = absences\n",
+    "\n",
+    "print('Done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a067d0512e34ff496efb7eb032eb974",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Party', options=('ANO', 'ODS', 'Piráti', 'SPD', 'ČSSD', 'KSČM', 'K…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import interact\n",
+    "\n",
+    "@interact\n",
+    "def show(Party=party_list):\n",
+    "    it = list(all_absences[Party].items())\n",
+    "    it.sort(key=lambda x: x[1]['Present']/(x[1]['Present']+ x[1]['Absent']), reverse=True)\n",
+    "\n",
+    "    f, ax = plt.subplots(figsize=(10, len(it) * 0.2))\n",
+    "    \n",
+    "    x, y = zip(*it)\n",
+    "    y_list = []\n",
+    "    for i in y:\n",
+    "        y_list.append(i['Present'] / (i['Present'] + i['Absent']))\n",
+    "    ax = sns.barplot(y_list, list(x), label=\"Total\", color=colors[party_list.index(Party)])\n",
+    "    ax.get_xaxis().set_major_formatter(FuncFormatter(fmt))\n",
+    "    plt.xlabel('Attendence (%)', fontsize=15, labelpad=20)\n",
+    "    plt.ylabel('Name of deputy', fontsize=15, labelpad=20)\n",
+    "    ax.set_title('Fig. 3: Attendence of members of each political party', fontsize=20, y=1.03)"
    ]
   },
   {
